# nonebot_plugin_slot_machine

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_slot_machine/: __init__.py  algorithm.py  database.py
nonebot_plugin_slot_machine/plugins/risk_control/: __init__.py  database.py  utils.py
nonebot_plugin_slot_machine/plugins/screw_work/: __init__.py  database.py  utils.py
slot_machine/plugins/slot_machine/: __init__.py  algorithm.py  constants.py  database.py  utils.py
slot_machine/plugins/slot_machine/plugins/screw_work/: __init__.py  database.py  utils.py
slot_machine/plugins/slot_machine/templates/: result.html
